--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.10.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
+    "emotion-theming": "^10.0.27",
     "express": "^4.16.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
