--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
     "@material-ui/styles": "^4.10.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.2.6",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "emotion-theming": "^10.0.27",
     "express": "^4.16.4",
+    "moment": "^2.27.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^8.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-month-picker": "^2.2.0",
+    "react-object-list": "^0.2.10",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.0",
+    "react-select": "^3.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2"
