--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
@@ -30,7 +32,8 @@
     "react-select": "^3.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "semantic-ui-css": "^2.4.1"
   },
   "scripts": {
     "start": "node server/server.js",
