--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^4.0.0",
     "emotion-theming": "^10.0.27",
     "express": "^4.16.4",
+    "mapbox-gl": "^1.11.1",
     "moment": "^2.27.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
