--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "alert": "^5.0.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.1",
     "classnames": "^2.2.6",
+    "confirm": "^0.1.1",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "emotion-theming": "^10.0.27",
@@ -24,7 +26,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.2.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-dialog": "^0.13.0",
     "react-confirm-alert": "^2.6.1",
