--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-confirm-alert": "^2.6.1",
     "react-confirm-bootstrap": "^5.3.1",
     "react-dom": "^16.8.6",
+    "react-image-gallery": "^1.0.8",
     "react-month-picker": "^2.2.0",
     "react-object-list": "^0.2.10",
     "react-redux": "^7.1.1",
